# PASE

./: .gitignore  CMakeLists.txt  README.md  pase_mv.c
config/: Findhypre.cmake  Findpase.cmake
doc/: doc-pase_matrix.md  learn-git.md
source/app_interface/app_hypre/: CMakeLists.txt  pase_matrix_hypre.c  pase_matrix_hypre.h  pase_vector_hypre.c  pase_vector_hypre.h
source/kernel/: CMakeLists.txt  pase_algebra.c  pase_algebra.h  pase_config.c  pase_config.h  pase_matrix.c  pase_matrix.h  pase_vector.c  pase_vector.h
test/: laplace.c
test/test_pase_matrix_vector/: CMakeLists.txt
test/test_pase_matrix_vector/source/: test_pase_matrix_vector.c
test/test_pase_matrix_vector/tool/: build-linux.sh  build-mac.sh
tool/: build-linux.sh  build-mac.sh
